Fixed CodeCov config